tests/resources/typecheck/p2feedback/useNotAtBeginning.xi
use x;
use y;

foo() {}

bar() {}

main() {}

use bogus; //error